[package]
name = "mev-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.96"
ethers-flashbots = "0.13.0"
tokio = { version = "1.28.0", features = ["full"] }
ethers = { version = "2.0.4", features = ["ws", "rustls"] }
reqwest = "0.11.17"
anyhow = "1.0.71"
async-trait = "0.1.68"
